Update p05.md - add Andrew's image of channel names

--- a/_hwk/p05.md
+++ b/_hwk/p05.md
@@ -87,12 +87,11 @@ Then, go on the course slack, <https://ucsb-cs156-{{page.qxx}}.slack.com>.  You 
 
 ![image](https://user-images.githubusercontent.com/1119017/113913264-f798c080-9790-11eb-8ff9-ac528e786d81.png)
 
-Find the slack channel for your table/group and join it, e.g. `#ltd-4-1-table-1`, `#ltd-4-2-table-10`, etc.  Please note that you will not necessarily see the channel: you'll have to search for it.
+Find the slack channel for your table/group and join it, e.g. `#ltd-4-1-table-1`, `#ltd-4-2-table-10`, etc.  Please note that you will not necessarily see the channel: you'll have to search for it.  You can use the search bar at the top of the Slack interface (with the 🔍 icon next to it).
 
 Here are the channel names:
 
-<img width="375" alt="image" src="https://github.com/ucsb-cs156/s24/assets/15284810/4cc6bc51-e702-4705-8014-6f6e7b6d5d76">
-
+![image](https://github.com/ucsb-cs156/s24/assets/1119017/009c3e36-105e-46ff-9463-e2bc86d64756)
 
 Once you've joined that channel, make a post with your name and pronouns, and identifying which group you are a part of (by your table number).   There will be up to seven of you per group if there is full attendance.
 
