minor update to p07.md

--- a/_hwk/p07.md
+++ b/_hwk/p07.md
@@ -52,7 +52,7 @@ Here's the big picture for team01:
     Controllers contain methods that map routes (e.g. `/api/locations?location=Oxnard`) to the code that provides the response
     (be that in JSON, HTML, or some other format.)
 * The sample code has service/controller pairs for three differnet remote APIs.
-* Your team is going to add four or five more service/controller pairs (one per team member), following the examples given.
+* Your team is going to add five or six more service/controller pairs (one per team member), following the examples given.
 
 
 * Full instructions for team01 here: <https://ucsb-cs156.github.io/s24/lab/team01.html>
