--- a/_hwk/p08.md
+++ b/_hwk/p08.md
@@ -28,20 +28,20 @@ You can see the branches that have been created for your repo here:
 
 | | | | |
 |-|-|-|-|
-| [w24-4pm-1 branches](https://github.com/ucsb-cs156-w24/team01-w24-4pm-1/branches) | [w24-4pm-2 branches](https://github.com/ucsb-cs156-w24/team01-w24-4pm-2/branches) | [w24-4pm-3 branches](https://github.com/ucsb-cs156-w24/team01-w24-4pm-3/branches) | [w24-4pm-4 branches](https://github.com/ucsb-cs156-w24/team01-w24-4pm-4/branches) |
-| [w24-5pm-1 branches](https://github.com/ucsb-cs156-w24/team01-w24-5pm-1/branches) | [w24-5pm-2 branches](https://github.com/ucsb-cs156-w24/team01-w24-5pm-2/branches) | [w24-5pm-3 branches](https://github.com/ucsb-cs156-w24/team01-w24-5pm-3/branches) | [w24-5pm-4 branches](https://github.com/ucsb-cs156-w24/team01-w24-5pm-4/branches) |
-| [w24-6pm-1 branches](https://github.com/ucsb-cs156-w24/team01-w24-6pm-1/branches) | [w24-6pm-2 branches](https://github.com/ucsb-cs156-w24/team01-w24-6pm-2/branches) | [w24-6pm-3 branches](https://github.com/ucsb-cs156-w24/team01-w24-6pm-3/branches) | [w24-6pm-4 branches](https://github.com/ucsb-cs156-w24/team01-w24-6pm-4/branches) |
-| [w24-7pm-1 branches](https://github.com/ucsb-cs156-w24/team01-w24-7pm-1/branches) | [w24-7pm-2 branches](https://github.com/ucsb-cs156-w24/team01-w24-7pm-2/branches) | [w24-7pm-3 branches](https://github.com/ucsb-cs156-w24/team01-w24-7pm-3/branches) | [w24-7pm-4 branches](https://github.com/ucsb-cs156-w24/team01-w24-7pm-4/branches) |
+| [s24-4pm-1 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-1/branches) | [s24-4pm-2 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-2/branches) | [s24-4pm-3 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-3/branches) | [s24-4pm-4 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-4/branches) |
+| [s24-4pm-5 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-5/branches) | [s24-4pm-6 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-6/branches) | [s24-4pm-7 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-7/branches) | [s24-4pm-8 branches](https://github.com/ucsb-cs156-s24/team01-s24-4pm-8/branches) |
+| [s24-5pm-1 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-1/branches) | [s24-5pm-2 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-2/branches) | [s24-5pm-3 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-3/branches) | [s24-5pm-4 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-4/branches) |
+| [s24-5pm-5 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-5/branches) | [s24-5pm-6 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-6/branches) | [s24-5pm-7 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-7/branches) | [s24-5pm-8 branches](https://github.com/ucsb-cs156-s24/team01-s24-5pm-8/branches) |
 
 - Your branch name should be something like your name or initials, followed by the service you are working on, e.g. `CG-Tides-Service` or `ChrisZipSvc` etc.
 - If you see a branch with your initials, and your name, you have completed this first step.
-- If you don't see your branch on Github, please look at [Step 2.2a and complete this step today in lab](https://ucsb-cs156.github.io/w24/lab/team01.html#step-22a-make-a-first-commit)
+- If you don't see your branch on Github, please look at [Step 2.2a and complete this step today in lab](https://ucsb-cs156.github.io/s24/lab/team01.html#step-22a-make-a-first-commit)
 
 
 Once you are done with this step, please:
 * Verify that if you follow the link in the table avove to your branch, you find your branch listed.
 * Then, click on your branch name; you should end up at a URL such as this one (but with your team name and branch name):
-  - `https://github.com/ucsb-cs156-w24/team01-w24-5pm-1/tree/Jonathan-Location`
+  - `https://github.com/ucsb-cs156-s24/team01-s24-5pm-1/tree/Jonathan-Location`
 * Finally submit that link as your submission for p09 on Canvas
 
 Then, you are encouraged to continue with team01.
@@ -50,10 +50,9 @@ You may want to skip ahead and do step 2.7 next (creating a Dokku deployment).
 
 It can be done out of order (it doesn't rely on steps 2.3, 2.4, 2.5, or 2.6), and it's going to be one of the two participation activities for tomorrow.  Why not get it out of the way today?
 
-You can find that activity here: <https://ucsb-cs156.github.io/w24/hwk/p11>
+You can find that activity here: <https://ucsb-cs156.github.io/s24/hwk/p11>
 
 Overall, your goal should be to have at least the service completed before class on Thursday, so that everyone in class can do at least one "code review".
 
 If you can have both
 the service and controller done before class on Thursday, that's even better.   It's good to aim for a pace a bit faster than the deadlines so that there's time to get help in case something goes wrong.
-
