--- a/_hwk/h01.md
+++ b/_hwk/h01.md
@@ -5,29 +5,31 @@ description: 'More team01 setup: your dokku instance'
 due: 2024-04-19 17:00
 title: h01
 layout: default
-canvas_assignment_link: 
+canvas_assignment_link: https://ucsb.instructure.com/courses/20058/assignments/236314
 qxx: s24
 team01_starter: https://github.com/ucsb-cs156-s24/STARTER-team01
+next_lecture: "Tuesday, 04/23/24"
 ---
 
 See also, this assignment on Canvas: <{{page.canvas_assignment_link}}>
 
-# Today's Second Participation Activity
+# Homework {{page.title}}
 
-Today's second participation activity requires you to have completed up through step 2.7 in team01: creating a *personal* deployment on Dokku for team01.
+This homework assignment requires you to have completed up through step 2.7 in team01: creating a *personal* deployment on Dokku for team01.
 
-- To do this, you should follow the steps under [Step 2.7 of team01](https://ucsb-cs156.github.io/w24/lab/team01.html#step-27-deploy-your-branch-to-a-dev-deployment).
+- To do this, you should follow the steps under [Step 2.7 of team01](https://ucsb-cs156.github.io/s24/lab/team01.html#step-27-deploy-your-branch-to-a-dev-deployment).
 - Note that you can do this even if you haven't finished steps 2.3, 2.4, 2.5 and 2.6 yet; all you need is a branch other than main, which you now have
   if you completed step 2.2a.
 
-Once you are done with this step, submit a link to your running Dokku instance on Canvas as the submission for p10.
+Once you are done with this step, submit a link to your running Dokku instance on Canvas as the submission for {{page.title}}.
 
 For example: `http://team01-cgaucho-dev.dokku-13.cs.ucsb.edu`
 
 # Then: continue working on team01
 
-The goal should be to have at least the service completed before class on Thursday, so that everyone in class can do at least one "code review".
-If you can have both the service and controller done before class on Thursday, that's even better.
+The goal should be to have *at least the service and it's tests* completed before the next lecture ({{page.next_lecture}}), so that everyone in class can do at least one "code review" during the next class.
+
+If you can have both the service and controller done before class that day, that's even better.
 
 It's good to aim for a pace a bit faster than the deadlines so that there's time to get help in case something goes wrong.
 
