--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -5,7 +5,7 @@ description: 'A team01 code review'
 due: 2024-02-01 23:59
 title: h02
 layout: default
-canvas_assignment_link: 
+canvas_assignment_link: https://ucsb.instructure.com/courses/20058/assignments/236304
 qxx: s24
 team01_starter: https://github.com/ucsb-cs156-s24/STARTER-team01
 ---
