Update h02.md - add title

--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -10,6 +10,8 @@ qxx: s24
 team01_starter: https://github.com/ucsb-cs156-s24/STARTER-team01
 ---
 
+# {{page.title}} - {{page.description}}
+
 This homework assignment is intended to be done sometime during the period that the
 team is working on team01.
 
