--- a/_hwk/p08.md
+++ b/_hwk/p08.md
@@ -39,7 +39,7 @@ You can see the branches that have been created for your repo here:
 
 
 Once you are done with this step, please:
-* Verify that if you follow the link in the table avove to your branch, you find your branch listed.
+* Verify that if you follow the link in the table above to your branch, you find your branch listed.
 * Then, click on your branch name; you should end up at a URL such as this one (but with your team name and branch name):
   - `https://github.com/ucsb-cs156-s24/team01-s24-5pm-1/tree/Jonathan-Location`
 * Finally submit that link as your submission for p08 on Canvas
