--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -43,3 +43,4 @@ In this homework exercise, you'll do five things, working in the team repo from 
 6. Make a pull request containing these two tests.
 7. Submit a link to the pull request on Canvas.
 
+## TODO: Andrew fill in the rest of this with some instructions!
