--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -17,22 +17,17 @@ This homework assignment is designed to introduce you to the ideas of integratio
 
 <img width="454" alt="testing pyramid" src="https://github.com/ucsb-cs156/ucsb-cs156.github.io/assets/1119017/cfbc9f96-af05-45de-bf54-bff7472a262a">
 
-You can read more about the testing pyramid here:
-
-* <https://ucsb-cs156.github.io/topics/testing/testing_pyramid.html>
-
 Briefly, the idea is that:
 * Unit tests test only a *single unit*, so in principle,  *absolutely everything* outside that unit should be mocked (including network services, database calls, etc.)
 * For an integration test, you are testing the integration of multiple units, so it's ok to *not* mock some parts of the interaction.  For example, an integration test of a controller might look *exactly like* the unit test of a controller, *except* that instead of mocking the database calls, you actually let the database calls happen to a real instance of the database (albeit one that is carefully controlled), and then you do assertions on the before and after state of the database tables.   
-* For an end-to-end test, you treat the entire application (to the extent possible) as a "black box", meaning that the tests typically have no knowledge of "what's inside the box".   You use browser automation software to interact with an instance of a real browser (Firefox, Chrome, Edge, Safari, etc.) and to act like a "robot" that is clicking buttons and entering data on real web pages, and then making assertions about the content of the page that shows up.  
+* For an end-to-end test, you treat the entire application (to the extent possible) as a "black box", meaning that the tests typically have no knowledge of "what's inside the box".   You use browser automation software to interact with an instance of a real browser (Firefox, Chrome, Edge, Safari, etc.) and to act like a "robot" that is clicking buttons and entering data on real web pages, and then making assertions about the content of the page that shows up.
 
-A note about end-to-end tests: These can be done in two modes:
+You can read more about the testing pyramid in a dedicated article here:
 
-1.  "headless", where there is no real browser being rendered on a screen; it's all just simulated in memory.  This is the usual way of running end-to-end tests because its a lot faster.
+* <https://ucsb-cs156.github.io/topics/testing/testing_pyramid.html>
 
-2. "not headless" where the tester can actually watch all of the interactions happen on screen as the tests are being run. This is typically only used when developing or debugging the end-to-end tests.
-
-
+If you were aware of the testing pyramid prior to taking this course, you might have noticed that unit tests exist in every assignment given in this course, but integration and end-to-end tests do not. While the rolling in of the rest of the testing pyramid is in progress and while we decide how to best integrate these topics directly into the course material, this assignment is designed to be a brief introduction to these testing topics that you will likely encounter in real-world software development. 
+  
 In this homework exercise, you'll do five things, working in the team repo from team03.  While you are working in the team repo, this is an individual homework.
 
 1. Run an existing integration test and look at the code.
@@ -43,4 +38,29 @@ In this homework exercise, you'll do five things, working in the team repo from 
 6. Make a pull request containing these two tests.
 7. Submit a link to the pull request on Canvas.
 
-## TODO: Andrew fill in the rest of this with some instructions!
+# The Repos you will work in
+
+Again, for this assignment you will be working in your team03 repos, but is an individual homework assignment. Here are the links to the repos:
+
+| 4pm | 5pm | 
+|-----|-----|
+|[team03-{{page.qxx}}-4pm-1](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-1)|[team03-{{page.qxx}}-5pm-1](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-1)|
+|[team03-{{page.qxx}}-4pm-2](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-2)|[team03-{{page.qxx}}-5pm-2](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-2)|
+|[team03-{{page.qxx}}-4pm-3](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-3)|[team03-{{page.qxx}}-5pm-3](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-3)|
+|[team03-{{page.qxx}}-4pm-4](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-4)|[team03-{{page.qxx}}-5pm-4](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-4)|
+|[team03-{{page.qxx}}-4pm-5](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-5)|[team03-{{page.qxx}}-5pm-5](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-5)|
+|[team03-{{page.qxx}}-4pm-6](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-6)|[team03-{{page.qxx}}-5pm-6](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-6)|
+|[team03-{{page.qxx}}-4pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-7)|[team03-{{page.qxx}}-5pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-7)|
+|[team03-{{page.qxx}}-4pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-8)|[team03-{{page.qxx}}-5pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-8)|
+
+# Part 1: Understanding integration and end-to-end tests
+
+Before you begin working on the integration and end-to-end tests for the code you wrote in team02 and team03, you'll need to know how to run the tests that already exist in the codebase.
+
+
+
+An end-to-end test can typically be done in two modes:
+1.  "headless", where there is no real browser being rendered on a screen; it's all just simulated in memory.  This is the usual way of running end-to-end tests because its a lot faster.
+
+2. "not headless" where the tester can actually watch all of the interactions happen on screen (albeit very quickly) as the tests are being run. This is typically only used when developing or debugging the end-to-end tests.
+
