--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -26,9 +26,9 @@ You can read more about the testing pyramid in a dedicated article here:
 
 * <https://ucsb-cs156.github.io/topics/testing/testing_pyramid.html>
 
-If you were aware of the testing pyramid prior to taking this course, you might have noticed that unit tests exist in every assignment given in this course, but integration and end-to-end tests do not. While the rolling in of the rest of the testing pyramid is in progress and while we decide how to best integrate these topics directly into the course material, this assignment is designed to be a brief introduction to these testing topics that you will likely encounter in real-world software development. 
+If you were aware of the testing pyramid prior to taking this course, you might have noticed that unit tests exist in every assignment given in this course, but integration and end-to-end tests do not...yet. While the rolling in of the rest of the testing pyramid is in progress and while we decide how to best integrate these topics directly into the course material, this assignment is designed to be a brief introduction to these testing topics that you will likely encounter in real-world software development. 
   
-In this homework exercise, you'll do five things, working in the team repo from team03.  While you are working in the team repo, this is an individual homework.
+In this homework exercise, you'll do five things, working in the team repo from team03.  While you are working in the team repo, **this is an individual homework**.
 
 1. Run an existing integration test and look at the code.
 2. Run an existing end-to-end test in headless mode (the normal way)
@@ -53,14 +53,62 @@ Again, for this assignment you will be working in your team03 repos, but is an i
 |[team03-{{page.qxx}}-4pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-7)|[team03-{{page.qxx}}-5pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-7)|
 |[team03-{{page.qxx}}-4pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-8)|[team03-{{page.qxx}}-5pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-8)|
 
-# Part 1: Understanding integration and end-to-end tests
+# Part 1.1: Understanding integration and end-to-end tests
 
 Before you begin working on the integration and end-to-end tests for the code you wrote in team02 and team03, you'll need to know how to run the tests that already exist in the codebase.
 
+The starter code contains a number of Java test files, under the `integration` and `web` directories. These files use a couple of new tools that are explained in the testing pyramid article
+ [here](https://ucsb-cs156.github.io/topics/testing/testing_pyramid.html). All of the integration and end-to-end tests contain the keyword `IT` which is similar to the keyword `Test` that appears at the end of each unit test file, and we use `Web` to distinguish end-to-end test from integration tests.
+ 
+* The [`RestaurantIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/integration/RestaurantIT.java) integration test class which contains the integration tests for the `Restaurants` backend. The structure of these tests are incredibly similar to the structure of the tests in [`RestaurantControllerTests`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/controllers/RestaurantsControllerTests.java), with the difference being that the integration test uses a real `RestaurantRepository` instead of a mocked one.
 
+* The [`HomePageWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/HomePageWebIT.java) end-to-end test class that contains the minimum configuration necessary for running an end-to-end test within our stack. This test uses Playwright to assert whether or not the home page of our application contains the text that we expect.
 
-An end-to-end test can typically be done in two modes:
+* The [`OauthWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/OauthWebIT.java) which tests our mocked authentication endpoint so that we can login like we normally do with Google Oauth but which fake user information.
+
+* The [`RestaurantWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/RestaurantWebIT.java) which contains the example of an end-to-end test for `Restaurants`.
+
+* [`WebTestCase`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/WebTestCase.java) which is the parent class of `OauthWebIt` and `RestaurantWebIT` and contains much of the shared code and setup that is needed for the end-to-end tests.
+
+These test files just contain a selection of examples of what kind of tests you could write for the backend and frontend that you worked on in team02 and team03. This assignment is relatively open-ended and any test that satisfy the submission criteria will be sufficient.
+
+# Part 1.2: Running the tests
+
+You may be used to running `mvn test` in order to run the test suite for the application, but integration and end-to-end tests run with a seperate command.
+
+In order to run the integration and end-to-end test suite you should use the following series of commands.
+
+```
+mvn clean
+```
+
+To make sure that we do not have anything lingering from previous test runs. This is important because the tests are highly sensitive and can fail if this is not done before the next steps.
+
+```
+INTEGRATION=true mvn test-compile
+```
+
+This step is ...
+
+```
+INTEGRATION=true mvn failsafe:integration-test
+```
+This command actually runs the test suite.
+
+If you have previously gone through these three commands and have modified the test cases **ONLY** then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise you may need to recompile. 
+
+A note about end-to-end tests: they can typically be done in two modes:
 1.  "headless", where there is no real browser being rendered on a screen; it's all just simulated in memory.  This is the usual way of running end-to-end tests because its a lot faster.
 
 2. "not headless" where the tester can actually watch all of the interactions happen on screen (albeit very quickly) as the tests are being run. This is typically only used when developing or debugging the end-to-end tests.
+
+Our tests run "headless" by default and you can configure the tests to run "not headless" with the following:
+
+```
+INTEGRATION=true HEADLESS=false mvn failsafe:integration-test
+```
+
+# Part 2: Your task
+
+# Part 3: Submission
 
