--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -82,20 +82,21 @@ In order to run the integration and end-to-end test suite you should use the fol
 mvn clean
 ```
 
-To make sure that we do not have anything lingering from previous test runs. This is important because the tests are highly sensitive and can fail if this is not done before the next steps.
+To make sure that we do not have anything lingering from previous test runs. Running `mvn clean` is important because the tests are highly sensitive and can fail if this is not done before the next steps.
 
 ```
 INTEGRATION=true mvn test-compile
 ```
 
-This step is ...
+This step is this test compile command that has this `INTEGRATION=true` command at the front. What this does is specifies that the program should run in the profile for integration tests. This command may take a while becuase it compiles the frontend with the backend.
 
 ```
 INTEGRATION=true mvn failsafe:integration-test
 ```
-This command actually runs the test suite.
 
-If you have previously gone through these three commands and have modified the test cases **ONLY** then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise you may need to recompile. 
+This command actually runs the test suite. The test suite should pass.
+
+If you have previously gone through these three commands and have **ONLY** modified the test cases then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise you may need to recompile. 
 
 A note about end-to-end tests: they can typically be done in two modes:
 1.  "headless", where there is no real browser being rendered on a screen; it's all just simulated in memory.  This is the usual way of running end-to-end tests because its a lot faster.
@@ -110,5 +111,30 @@ INTEGRATION=true HEADLESS=false mvn failsafe:integration-test
 
 # Part 2: Your task
 
+After understanding how to run the tests, you can begin working on the tests using the examples for the parts of the application that you work on in team01 and team02.
+
+| Integration Test  | End-to-end Test | 
+|-|-|
+| `JokeIT` | `JokeWebIT` | 
+| `LocationIT` | `LocationWebIT` | 
+| `PublicHolidaysIT` | `PublicHolidaysWebIT` | 
+| `TidesIT` | `TidesWebIT` | 
+| `UniversityIT` | `UniversityWebIT` | 
+| `ZipCodeIT` | `ZipCodeWebIT` | 
+
+There are two test files that you must write as seen in the table above. It is okay to emulate the examples in `RestaurantIT.java` and `RestaurantWebIT.java` but it is not a requirement to follow it one-to-one, and depending on your implementation you may not be able to.
+
+Create a new branch from main (assuming that all PRs from team03 are merged into main) and begin working on the tests.
+
+For the both tests, you may choose any controller method you implemented in team02 to test or any frontend feature from team03. You **are not** required to cover every method or every frontend feature.
+
+**NOTE:** For the end-to-end test, if your frontend form contains a date picker, you may have trouble selecting a date. If you can figure out how to do it with the [Playwright Actions](https://playwright.dev/java/docs/input), great. If not, you can try to do something similar to the integration test, where you save something to the database using the repository directly. 
+
 # Part 3: Submission
+
+Once you have developed both an `_IT.test` and a `_WebIT.test`, make a pull request containing both, but you do not need to merge it or obtain reviews. 
+
+There are not additional metrics like coverage or mutation testing, as long as the tests past with the commands in `Step #1.2` then that is sufficient.
+
+When the PR passes all the checks, you can submit a link to the PR on canvas.
 
