--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -115,12 +115,12 @@ After understanding how to run the tests, you can begin working on the tests usi
 
 | Integration Test  | End-to-end Test | 
 |-|-|
-| `JokeIT.java` | `JokeWebIT.java` | 
-| `LocationIT.java` | `LocationWebIT.java` | 
-| `PublicHolidaysIT.java` | `PublicHolidaysWebIT.java` | 
-| `TidesIT.java` | `TidesWebIT.java` | 
-| `UniversityIT.java` | `UniversityWebIT.java` | 
-| `ZipCodeIT.java` | `ZipCodeWebIT.java` | 
+| `UCSBDiningCommonsMenuItem.java` | `UCSBDiningCommonsMenuItemWebIT.java` | 
+| `UCSBOrganizationIT.java` | `UCSBOrganizationWebIT.java` | 
+| `RecommendationRequestIT.java` | `RecommendationRequestWebIT.java` | 
+| `MenuItemReviewIT.java` | `MenuItemReviewWebIT.java` | 
+| `HelpRequestIT.java` | `HelpRequestWebIT.java` | 
+| `ArticleIT.java` | `ArticleWebIT.java` | 
 
 There are two test files that you must write as seen in the table above. It is okay to emulate the examples in `RestaurantIT.java` and `RestaurantWebIT.java` but it is not a requirement to follow it one-to-one, and depending on your implementation you may not be able to.
 
