--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -40,6 +40,8 @@ In this homework exercise, you'll do five things, working in the team repo from 
 
 # The Repos you will work in
 
+**IMPORTANT:** Please pull the updated starter code for team03 into your team repos, only one person in the team has to do this. 
+
 Again, for this assignment you will be working in your team03 repos, but is an individual homework assignment. Here are the links to the repos:
 
 | 4pm | 5pm | 
