Update h99.md - add instructions for updating from starter code

--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -40,9 +40,16 @@ In this homework exercise, you'll do five things, working in the team repo from 
 
 # The Repos you will work in
 
-**IMPORTANT:** Please pull the updated starter code for team03 into your team repos, only one person in the team has to do this. 
+# Part 1.1: Getting Started
 
-Again, for this assignment you will be working in your team03 repos, but is an individual homework assignment. Here are the links to the repos:
+Again, for this assignment you will be working in your team03 repos, but is an individual homework assignment. 
+
+Start by going into the directory where you cloned your team03 repo.
+
+<details markdown="1">
+<summary>
+Click triangle for links to the repos:  
+</summary>
 
 | 4pm | 5pm | 
 |-----|-----|
@@ -55,7 +62,34 @@ Again, for this assignment you will be working in your team03 repos, but is an i
 |[team03-{{page.qxx}}-4pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-7)|[team03-{{page.qxx}}-5pm-7](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-7)|
 |[team03-{{page.qxx}}-4pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-4pm-8)|[team03-{{page.qxx}}-5pm-8](https://github.com/ucsb-cs156-{{page.qxx}}/team03-{{page.qxx}}-5pm-8)|
 
-# Part 1.1: Understanding integration and end-to-end tests
+</details>
+
+1. Begin by making a branch for this homework assignment.
+2. Then, update that branch by merging in the code in <https://github.com/ucsb-cs156-s24/STARTER-team03> again.  You will need to do this because we made a few
+   bug fixes to the code that supports integration and end-to-end testing *after* most of your teams cloned the code for team03.
+
+   You may already have a remote for this called `starter`; you can check
+   by typing: `git remote -v` and seeing if you have a remote called `starter`. If not, define one:
+
+   ```
+   git remote add starter https://github.com/ucsb-cs156-s24/STARTER-team03
+   ```
+
+   Then do:
+   ```
+   git fetch starter
+   git merge starter/main
+   ```
+
+   Then push to your new branch:
+
+   ```
+   git push origin your-branch-name
+   ```
+
+Now you are ready to try running the integration and end-to-end tests that are already in the starter code (instructions in next step.)
+   
+# Part 1.2: Understanding integration and end-to-end tests
 
 Before you begin working on the integration and end-to-end tests for the code you wrote in team02 and team03, you'll need to know how to run the tests that already exist in the codebase.
 
@@ -74,7 +108,7 @@ The starter code contains a number of Java test files, under the `integration` a
 
 These test files just contain a selection of examples of what kind of tests you could write for the backend and frontend that you worked on in team02 and team03. This assignment is relatively open-ended and any test that satisfy the submission criteria will be sufficient.
 
-# Part 1.2: Running the tests
+# Part 1.3: Running the tests
 
 You may be used to running `mvn test` in order to run the test suite for the application, but integration and end-to-end tests run with a seperate command.
 
