Update h99.md - add info about potential merge conflicts

--- a/WIP/h99.md
+++ b/WIP/h99.md
@@ -80,6 +80,8 @@ Click triangle for links to the repos:
    git fetch starter
    git merge starter/main
    ```
+   
+   It is possible that there may be merge conflicts at this stage that you have to resolve; if so resolve those.
 
    Then push to your new branch:
 
