Update and rename h99.md to h05.md

--- a/WIP/h05.md
+++ b/WIP/h05.md
@@ -3,10 +3,11 @@ layout: default
 assigned: 2024-05-14 17:00
 description: 'Integration and E2E Testing'
 due: 2024-06-03 23:59
-title: h99
+title: h05
 layout: default
 qxx: s24
 parent: WIP
+canvas: https://ucsb.instructure.com/courses/20058/assignments/243482
 ---
 
 <!-- Put parent: WIP until you are ready to move into the real homeworks -->
@@ -172,5 +173,5 @@ Once you have developed both an `_IT.test` and a `_WebIT.test`, make a pull requ
 
 There are not additional metrics like coverage or mutation testing, as long as the tests past with the commands in `Step #1.2` then that is sufficient.
 
-When the PR passes all the checks, you can submit a link to the PR on canvas.
+When the PR passes all the checks, you can submit a link to the PR on canvas at <{{page.canvas}}>.
 
