--- a/WIP/h05.md
+++ b/WIP/h05.md
@@ -101,13 +101,13 @@ The starter code contains a number of Java test files, under the `integration` a
 
 * The [`HomePageWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/HomePageWebIT.java) end-to-end test class that contains the minimum configuration necessary for running an end-to-end test within our stack. This test uses Playwright to assert whether or not the home page of our application contains the text that we expect.
 
-* The [`OauthWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/OauthWebIT.java) which tests our mocked authentication endpoint so that we can login like we normally do with Google Oauth but which fake user information.
+* The [`OauthWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/OauthWebIT.java) which tests our mocked authentication endpoint so that we can login like we normally do with Google Oauth but with fake user information.
 
 * The [`RestaurantWebIT`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/web/RestaurantWebIT.java) which contains the example of an end-to-end test for `Restaurants`.
 
 * [`WebTestCase`](https://github.com/ucsb-cs156-{{page.qxx}}/STARTER-team03/blob/main/src/test/java/edu/ucsb/cs156/example/WebTestCase.java) which is the parent class of `OauthWebIt` and `RestaurantWebIT` and contains much of the shared code and setup that is needed for the end-to-end tests.
 
-These test files just contain a selection of examples of what kind of tests you could write for the backend and frontend that you worked on in team02 and team03. This assignment is relatively open-ended and any test that satisfy the submission criteria will be sufficient.
+These test files just contain a selection of examples of what kind of tests you could write for the backend and frontend that you worked on in team02 and team03. This assignment is relatively open-ended and any test that satisfies the submission criteria will be sufficient.
 
 # Part 1.3: Running the tests
 
@@ -125,7 +125,7 @@ To make sure that we do not have anything lingering from previous test runs. Run
 INTEGRATION=true mvn test-compile
 ```
 
-This step is this test compile command that has this `INTEGRATION=true` command at the front. What this does is specifies that the program should run in the profile for integration tests. This command may take a while becuase it compiles the frontend with the backend.
+This step is this test compile command that has this `INTEGRATION=true` command at the front. What this does is it specifies that the program should run in the profile for integration tests. This command may take a while because it compiles the frontend with the backend.
 
 ```
 INTEGRATION=true mvn failsafe:integration-test
@@ -133,7 +133,7 @@ INTEGRATION=true mvn failsafe:integration-test
 
 This command actually runs the test suite. The test suite should pass.
 
-If you have previously gone through these three commands and have **ONLY** modified the test cases then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise you may need to recompile. 
+If you have previously gone through these three commands and have **ONLY** modified the test cases then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise, you may need to recompile. 
 
 A note about end-to-end tests: they can typically be done in two modes:
 1.  "headless", where there is no real browser being rendered on a screen; it's all just simulated in memory.  This is the usual way of running end-to-end tests because its a lot faster.
@@ -159,11 +159,11 @@ After understanding how to run the tests, you can begin working on the tests usi
 | `HelpRequestIT.java` | `HelpRequestWebIT.java` | 
 | `ArticleIT.java` | `ArticleWebIT.java` | 
 
-There are two test files that you must write as seen in the table above. It is okay to emulate the examples in `RestaurantIT.java` and `RestaurantWebIT.java` but it is not a requirement to follow it one-to-one, and depending on your implementation you may not be able to.
+There are two test files that you must write as seen in the table above. It is okay to emulate the examples in `RestaurantIT.java` and `RestaurantWebIT.java` but it is not a requirement to follow them one-to-one, and depending on your implementation you may not be able to.
 
 Create a new branch from main (assuming that all PRs from team03 are merged into main) and begin working on the tests.
 
-For the both tests, you may choose any controller method you implemented in team02 to test or any frontend feature from team03. You **are not** required to cover every method or every frontend feature.
+For both tests, you may choose any controller method you implemented in team02 to test or any frontend feature from team03. You **are not** required to cover every method or every frontend feature.
 
 **NOTE:** For the end-to-end test, if your frontend form contains a date picker, you may have trouble selecting a date. If you can figure out how to do it with the [Playwright Actions](https://playwright.dev/java/docs/input), great. If not, you can try to do something similar to the integration test, where you save something to the database using the repository directly. 
 
@@ -171,7 +171,7 @@ For the both tests, you may choose any controller method you implemented in team
 
 Once you have developed both an `_IT.test` and a `_WebIT.test`, make a pull request containing both, but you do not need to merge it or obtain reviews. 
 
-There are not additional metrics like coverage or mutation testing, as long as the tests past with the commands in `Step #1.2` then that is sufficient.
+There are no additional metrics like coverage or mutation testing, as long as the tests passed with the commands in `Step #1.2` then that is sufficient.
 
 When the PR passes all the checks, you can submit a link to the PR on canvas at <{{page.canvas}}>.
 
