--- a/_hwk/h05.md
+++ b/_hwk/h05.md
@@ -134,7 +134,7 @@ This command actually runs the test suite. The test suite should pass.
 
 If you have previously gone through these three commands and have **ONLY** modified the test cases then you may just use the last command,`INTEGRATION=true mvn failsafe:integration-test`. Otherwise, you may need to recompile. 
 
-If you want to just run a single integration/end-to-end test (e.g. only HomePageWebIT.java) use -Dit.test=ClassName, for example:
+If you want to just run a single integration/end-to-end test (e.g. only `HomePageWebIT.java`) use `-Dit.test=ClassName`, for example:
 
 ```
 INTEGRATION=true mvn test-compile failsafe:integration-test -Dit.test=HomePageWebIT
